modify: jvm-opt-1